<!--
SlimTwitter is an Open Source app realized by Leonardo Rignanese
 GNU GENERAL PUBLIC LICENSE  Version 2, June 1991
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_action_autorenew"
        android:title="@string/refresh"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/openInBrowser"
        android:title="@string/openInBrowser"></item>
    <item
        android:id="@+id/share"
        android:title="@string/share"></item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"></item>
</menu>
