<?xml version="1.0" encoding="utf-8"?>
<!--
SlimTwitter is an Open Source app realized by Leonardo Rignanese
 GNU GENERAL PUBLIC LICENSE  Version 2, June 1991
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="prefCat_key_fb_settings"
        android:title="@string/prefCat_tw_settings_title">
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefCat_key_app_settings"
        android:title="@string/prefCat_app_settings_title">
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefCat_key_app_information"
        android:title="@string/prefCat_app_information_title">

        <PreferenceScreen
            android:key="pref_key_version"
            android:summary="1.0"
            android:title="@string/version">
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>